[package]
name = "ahuff"
version = "0.1.1"
edition = "2021"
description = "An adaptive Huffman coder"
license = "Apache-2.0"
authors = ["Brennan Vincent <brennan@umanwizard.com>"]
repository = "https://github.com/umanwizard/ahuff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endio_bit = "0.2.0"
smallvec = { "version" = "1.9", "features" = ["const_generics"] }
